--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="scene7-position.css">
     <link rel="stylesheet" href="scene7-elements.css">
     <link rel="stylesheet" href="scene11-wallet.css">
+    <!-- Scene Alignment Fix -->
+    <link rel="stylesheet" href="scene-alignment-fix.css">
     <!-- Improved Mobile Responsive -->
     <link rel="stylesheet" href="mobile-responsive-improved.css">
 </head>
